# IPP-wielomiany

./: .gitignore  CMakeLists.txt  MainPage.dox  README.md
src/: Line.h  calc.c  calc.h  line.c  line.h  parse.c  parse.h  poly.c  poly.h  poly_example.c  poly_test.c  print.h  read.c  read.h  readInput.c  readInput.h  stack.c  stack.h  vector.c  vector.h
